# generatooorr

./: .gitignore  .gitleaksignore  README.md  pyproject.toml  tox.ini
.github/workflows/: main_workflow.yaml  release.yaml
eth_lisbon_hack/: __init__.py
mints/: 01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  mappings.txt
scripts/: run_agent.sh
