[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eth-lisbon-hack"
version = "0.1.0.rc0"
description = "Eth lisbon hack"
authors = [ "angrybayblade <vptl185@gmail.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "eth_lisbon_hack"

[tool.poetry.dependencies]
python = "<4,>=3.8"
open-autonomy = {version = "==0.14.10", extras = ["all"]}
open-aea-test-autonomy = "==0.14.10"
open-aea-ledger-ethereum = "==1.50.0"
open-aea-ledger-cosmos = "==1.50.0"
protobuf = ">=4.21.0,<4.25.0"
web3 = ">=6.0.0,<7"
tomte = {version = "==0.2.16", extras = ["tests", "cli", "tox"]}
open-aea = {version = "==1.50.0", extras = ["all"]}
open-aea-cli-ipfs = "==1.50.0"

[tool.poetry.group.dev.dependencies]
tomte = {version = "==0.2.16", extras = ["cli", "tests"]}

